%% Mermaid ER diagram for Tagadodo database (MongoDB via Mongoose)
%% View online: https://mermaid.live
%% Updated to reflect current implementation

erDiagram
  User ||--o{ Address : has
  User ||--o{ Cart : has
  User ||--o{ Order : places
  User ||--o{ Favorite : marks
  User ||--o{ Media : uploads
  User ||--o{ SupportTicket : creates
  User ||--o{ ServiceRequest : requests

  Category ||--o{ Product : categorizes
  Category ||--o{ Category : parent_child

  Media ||--o{ Product : used_in
  Media ||--o{ Variant : used_in
  Media ||--o{ Category : used_in

  Attribute ||--o{ AttributeValue : defines
  AttributeGroup ||--o{ Attribute : groups
  Product ||--o{ Variant : has
  Product ||--o{ Favorite : is_favorited
  Product ||--o{ CartItem : referenced_by
  Product ||--o{ OrderItem : referenced_by

  Variant ||--o{ CartItem : added_as
  Variant ||--o{ OrderItem : ordered_as
  Variant }o--o{ AttributeValue : composes

  Cart ||--o{ CartItem : contains
  Order ||--o{ OrderItem : contains
  Order ||--o{ Order : converted_from

  SupportTicket ||--o{ SupportMessage : contains
  ServiceRequest ||--o{ EngineerOffer : receives

  User {
    string phone PK "unique"
    string firstName
    string lastName
    string gender
    string jobTitle
    string passwordHash
    string[] roles
    string[] permissions
    boolean customer_capable
    boolean engineer_capable
    string engineer_status
    boolean wholesale_capable
    string wholesale_status
    number wholesale_discount_percent
    boolean admin_capable
    string admin_status
    string status
    string preferredCurrency
    date lastActivityAt
    date deletedAt
    string deletedBy
    string suspendedReason
    string suspendedBy
    date suspendedAt
    date createdAt
    date updatedAt
  }

  Address {
    ObjectId userId FK
    string label
    string addressType
    string recipientName
    string recipientPhone
    string line1
    string line2
    string city
    string region
    string country
    string postalCode
    object coords
    string notes
    boolean isDefault
    boolean isActive
    string placeId
    date deletedAt
    ObjectId deletedBy
    date lastUsedAt
    number usageCount
    date createdAt
    date updatedAt
  }

  Media {
    string url
    string filename
    string storedFilename
    string name
    string category
    string type
    string mimeType
    number size
    number width
    number height
    string fileHash
    string description
    string[] tags
    ObjectId uploadedBy FK
    number usageCount
    string[] usedIn
    boolean isPublic
    date deletedAt
    string deletedBy
    date createdAt
    date updatedAt
  }

  Category {
    ObjectId parentId FK "Category"
    string name
    string nameEn
    string slug "unique"
    string description
    string descriptionEn
    ObjectId imageId FK "Media"
    string metaTitle
    string metaDescription
    string[] metaKeywords
    number order
    boolean isActive
    boolean isFeatured
    number productsCount
    number childrenCount
    date deletedAt
    ObjectId deletedBy FK "User"
    date createdAt
    date updatedAt
  }

  Brand {
    string name
    string nameEn
    string slug "unique"
    string image
    string description
    string descriptionEn
    boolean isActive
    number sortOrder
    object metadata
    date createdAt
    date updatedAt
  }

  Attribute {
    string name
    string nameEn "unique"
    string slug "unique"
    string type
    string description
    number order
    boolean isActive
    boolean isFilterable
    boolean isRequired
    boolean showInFilters
    ObjectId groupId FK "AttributeGroup"
    number usageCount
    date deletedAt
    string deletedBy
    date createdAt
    date updatedAt
  }

  AttributeValue {
    ObjectId attributeId FK
    string value
    string valueEn
    string slug
    string hexCode
    string imageUrl
    ObjectId imageId FK "Media"
    string description
    number order
    boolean isActive
    number usageCount
    date deletedAt
    string deletedBy
    date createdAt
    date updatedAt
  }

  Product {
    ObjectId categoryId FK
    string name
    string nameEn
    string slug "unique"
    string description
    string descriptionEn
    ObjectId brandId FK "Brand"
    boolean isActive
    boolean isFeatured
    boolean isNew
    boolean isBestseller
    string status
    ObjectId mainImageId FK "Media"
    ObjectId[] imageIds FK "Media"
    ObjectId[] attributes FK "Attribute"
    number viewsCount
    number salesCount
    number variantsCount
    number reviewsCount
    number averageRating
    string metaTitle
    string metaDescription
    string[] metaKeywords
    number order
    date deletedAt
    ObjectId deletedBy FK "User"
    date createdAt
    date updatedAt
  }

  Variant {
    ObjectId productId FK
    string sku
    object attributeValues "[{attributeId,valueId,name?,value?}]"
    number basePriceUSD
    number compareAtPriceUSD
    number costPriceUSD
    number stock
    number minStock
    boolean trackInventory
    boolean allowBackorder
    ObjectId imageId FK "Media"
    number weight
    number length
    number width
    number height
    boolean isActive
    boolean isAvailable
    number salesCount
    date deletedAt
    ObjectId deletedBy FK "User"
    date createdAt
    date updatedAt
  }

  Cart {
    ObjectId userId FK "User"
    string deviceId
    string status
    object[] items "CartItem[]"
    string currency
    string accountType
    string appliedCouponCode
    number couponDiscount
    string[] autoAppliedCouponCodes
    number[] autoAppliedDiscounts
    object pricingSummary
    date lastActivityAt
    boolean isAbandoned
    number abandonmentEmailsSent
    date lastAbandonmentEmailAt
    ObjectId convertedToOrderId FK "Order"
    date convertedAt
    boolean isMerged
    ObjectId mergedIntoUserId FK "User"
    date mergedAt
    object metadata
    date expiresAt
    date createdAt
    date updatedAt
  }

  CartItem {
    ObjectId variantId FK
    ObjectId productId FK
    number qty
    date addedAt
    object productSnapshot
    object pricing
  }

  Order {
    string orderNumber "unique"
    ObjectId userId FK
    string status
    string paymentStatus
    object[] statusHistory
    object deliveryAddress
    object[] items "OrderItem[]"
    string currency
    number subtotal
    number itemsDiscount
    string appliedCouponCode
    number couponDiscount
    object couponDetails
    number shippingCost
    number tax
    number totalDiscount
    number total
    string paymentMethod
    string paymentProvider
    string paymentIntentId
    date paidAt
    string shippingMethod
    string trackingNumber
    string trackingUrl
    date estimatedDeliveryDate
    date deliveredAt
    string customerNotes
    string adminNotes
    boolean isRefunded
    number refundAmount
    string refundReason
    date refundedAt
    date cancelledAt
    string cancellationReason
    object metadata
    date createdAt
    date updatedAt
  }

  OrderItem {
    ObjectId productId FK
    ObjectId variantId FK
    number qty
    number basePrice
    number discount
    number finalPrice
    number lineTotal
    string currency
    ObjectId appliedPromotionId FK "PriceRule"
    number promotionDiscount
    object snapshot
    string itemStatus
    boolean isReturned
    number returnQty
    string returnReason
    date returnedAt
  }

  Favorite {
    ObjectId userId FK "User"
    string deviceId
    ObjectId productId FK "Product"
    ObjectId variantId FK "Variant"
    string note
    number viewsCount
    date lastViewedAt
    boolean isSynced
    date syncedAt
    date deletedAt
    date createdAt
    date updatedAt
  }

  SupportTicket {
    ObjectId userId FK "User"
    string title
    string description
    string status
    string priority
    string category
    ObjectId assignedTo FK "User"
    date dueDate
    date closedAt
    number slaHours
    date createdAt
    date updatedAt
  }

  SupportMessage {
    ObjectId ticketId FK "SupportTicket"
    ObjectId senderId FK "User"
    string content
    string type
    object[] attachments
    date createdAt
  }

  ServiceRequest {
    ObjectId userId FK "User"
    string title
    string description
    string status
    string category
    object location
    date requestedDate
    date createdAt
    date updatedAt
  }

  EngineerOffer {
    ObjectId serviceRequestId FK "ServiceRequest"
    ObjectId engineerId FK "User"
    string description
    number price
    string status
    date validUntil
    date createdAt
    date updatedAt
  }

  AttributeGroup {
    string name
    string nameEn
    string slug
    number order
    boolean isActive
    date createdAt
    date updatedAt
  }

  Notification {
    ObjectId userId FK "User"
    string title
    string message
    string type
    string status
    object data
    date readAt
    date createdAt
  }

  AnalyticsSnapshot {
    date date
    string period
    object users
    object products
    object orders
    object services
    date createdAt
  }
